--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="fbox col-lg-4">
           <i class="icon fa-4x fa-solid fa-circle-check"></i>
           <h3>Fresh Plants.</h3>
-          <p>So easy to use, even your dog could do it.</p>
+          <p>So easy to use, even your dog could do it</p>
           </div>
 
           <div class="fbox col-lg-4">
